2007-08-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* t/ClutterBox.t:
	* t/ClutterHBox.t:
	* t/ClutterVBox.t: Add tests for Clutter::Box and subclasses.

2007-08-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* t/ClutterAlpha.t:
	* t/ClutterTimeline.t: Add tests.

2007-08-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterBox.xs: Remove unused variable to fix a compiler warning.

2007-08-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm:
	* README: Release 0.401.

2007-08-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutterperl.h:
	* xs_files_gtk:
	* maps-gtk:
	* Makefile.PL: Add support for the clutter-gtk integration
	library, and dinamically generate the boot functions map.

	* xs/ClutterGtk.xs: Add wrappers for the GtkClutter widget
	and call the class Gtk2::ClutterEmbed.

	* Clutter.pm: Require Gtk2.

	* tools/TestHelper.pm: Add a Test::More wrapper module which
	should check whether we have a suitable environment for
	running the tests or not.

	* t/*.t: Update the tests to use Clutter::TestHelper.

	* MANIFEST: Update.

2007-08-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* README:
	* Clutter.pm:
	* Makefile.PL: Bump up requirements and version to 0.400

2007-08-03  Emmanuele Bassi  <ebassi@openedhand.com>

	* AUTHORS:
	* MANIFEST: Update

	* t/ClutterBehaviourEllipse.t: Add test suite for the
	ellipse behaviour

	* xs/ClutterBehaviourEllipse.xs: Use arrayrefs for the
	center point, the size and the angles, to make the API
	more perlish. Actually, invert the parameters for the
	set_angle_tilt() method.

	* xs/ClutterEvent.xs: Fix apidoc.

2007-08-02  Emmanuele Bassi  <ebassi@openedhand.com>  (rev:1154)

	Bind ClutterBackend::get_resolution() and
	ClutterBackend::set_resolution()

	 These are the accessors for the backend resolution. You should use
	the resolution when transforming a font size from Pango units to
	pixels.

2007-08-02  Emmanuele Bassi  <ebassi@openedhand.com>  (rev:1152)

	Add examples/cairo.pl to the manifest


